module7-task1-additions: Corrected block for overflow content (criterion D13)

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -176,7 +176,7 @@
     flex-direction: row;
     flex-wrap: wrap;
     justify-content: space-between;
-    align-items: center;
+    align-items: flex-start;
 
     &::before {
       display: none;
