--- a/source/less/blocks/comments.less
+++ b/source/less/blocks/comments.less
@@ -82,16 +82,17 @@
   .comments__wrapper {
     position: relative;
 
-    padding-top: 186px;
+    padding-top: 0;
     padding-bottom: 35px;
 
-    .image("icon-quotes.svg", transparent, 50%, 20%);
+    .image("icon-quotes.svg", transparent, 50%, 73px);
   }
 
   .comments__text {
     width: 100%;
     max-width: 700px;
     margin: 0 auto;
+    margin-top: 186px;
     padding-bottom: 35px;
   }
 
