--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -16,13 +16,13 @@
     z-index: 10;
 
     display: flex;
-    align-items: center;
-    height: 110px;
+    min-height: 110px;
 
     background-color: fade(@black, 30%);
   }
 
   .page-header__wrapper {
+    padding-top: 20px;
     padding-left: 10px;
     padding-right: 10px;
   }
