--- a/source/less/blocks/page-navigation.less
+++ b/source/less/blocks/page-navigation.less
@@ -96,6 +96,7 @@
 @media (min-width: @desktop) {
   .page-navigation {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
