--- a/source/less/blocks/promotion.less
+++ b/source/less/blocks/promotion.less
@@ -40,6 +40,7 @@
 
 .promotion__market {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
   width: 100%;
