--- a/source/less/blocks/site-list.less
+++ b/source/less/blocks/site-list.less
@@ -33,7 +33,9 @@
 @media (min-width: @desktop) {
   .site-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
+    width: 71.3%;
     margin: 0;
   }
 
