--- a/source/less/blocks/user-photo.less
+++ b/source/less/blocks/user-photo.less
@@ -109,6 +109,8 @@
 }
 
 .user-photo__author {
+  display: block;
+  max-width: 85%;
   margin: 0;
 
   font-style: normal;
